--- a/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
@@ -35,6 +35,7 @@ detect_range: -1.0 # -1.0 means fully-observable
 
 arena_size: 0.9
 max_height: 1.2 # 2 * arena_size
+start_height: 0.3
 v_drone: 1.0
 v_prey: 1.4
 
