--- a/cfg/task/HideAndSeek_circle_eval_large.yaml
+++ b/cfg/task/HideAndSeek_circle_eval_large.yaml
@@ -26,7 +26,8 @@ evaluation_flag: random # 'random', '1_middle', '3_narrow', '3_surround'
 num_agents: 4
 detect_range: -1.0 # -1.0 means fully-observable
 
-arena_size: 1.2
+arena_size: 0.9
+max_height: 1.2 # 2 * arena_size
 v_drone: 1.0
 v_prey: 1.3
 
@@ -37,7 +38,7 @@ collision_radius: 0.01
 use_dynamic: False
 
 cylinder:
-  size: 0.4
+  size: 0.3
   num: 5
   max_active: 1
   min_active: 0
