--- a/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
@@ -24,7 +24,9 @@ capture_threshold: 0.98
 use_outer_cl: 1
 threshold_min: 1.0
 threshold_max: 100.0
-prob_random: 0.3
+prob_random: 0.7
+start_height: 0.3
+height_step: 0.05
 
 # use rejection sampling validation
 use_validation: 1
@@ -38,7 +40,6 @@ detect_range: -1.0 # -1.0 means fully-observable
 
 arena_size: 0.9
 max_height: 1.2 # 2 * arena_size
-start_height: 0.3
 v_drone: 1.0
 v_prey: 1.6
 
