--- a/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
@@ -24,9 +24,11 @@ capture_threshold: 0.98
 use_outer_cl: 1
 threshold_min: 1.0
 threshold_max: 100.0
-prob_random: 0.7
+prob_random: 0.3
 start_height: 0.3
-height_step: 0.05
+height_step: 0.1
+load_task_buffer: False
+task_model_dir: null
 
 # use rejection sampling validation
 use_validation: 1
