--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,7 +1,7 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/random0to3_final/v2_0_catch0_2_height0_6_size0_9.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/v1_6_cl_heightstep0_1_startheight0_3_threshold1toinf_randomp0_7/03-31_20-44/wandb/run-20240331_204426-kfgkm41m/files/checkpoint_26345472.pt
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_final/v1_2_catch0_2_height1_2_size0_9.pt
-# model_dir: null
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/v0_8_cl_loadv_1_2/04-02_17-24/wandb/run-20240402_172418-o86w6c3v/files/checkpoint_52559872.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_final/v1_2_catch0_2_height1_2_size0_9.pt
+model_dir: null
 
 # hydra.job.chdir: false
 
@@ -31,7 +31,7 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: debug
-  run_name: v0_8_cl_loadv_1_2_updatecheckinside_random0_5
+  run_name: v0_5_catch0_5_cl
   job_type: train
   entity: chenjy
   project: PredatorPrey
