--- a/cfg/task/HideAndSeek_circle_eval_large.yaml
+++ b/cfg/task/HideAndSeek_circle_eval_large.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 1000
+  num_envs: 1
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -20,7 +20,7 @@ action_transform: rate
 use_validation: 1
 
 # evalution scenario
-evaluation_flag: random # 'random', '1_middle', '3_narrow', '3_surround'
+evaluation_flag: 3_surround # 'random', '1_middle', '3_narrow', '3_surround'
 
 # exp
 num_agents: 4
@@ -29,7 +29,7 @@ detect_range: -1.0 # -1.0 means fully-observable
 arena_size: 0.9
 max_height: 1.2 # 2 * arena_size
 v_drone: 1.0
-v_prey: 2.0
+v_prey: 1.2
 
 use_collision: 1
 use_speed_penalty: 1
@@ -42,4 +42,4 @@ cylinder:
   num: 5
   max_active: 3
   min_active: 0
-  random_active: True # if False, only train max_active
+  random_active: False # if False, only train max_active
