--- a/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
@@ -24,7 +24,7 @@ capture_threshold: 0.98
 use_outer_cl: 1
 threshold_min: 1.0
 threshold_max: 100.0
-prob_random: 0.3
+prob_random: 1.0
 start_height: 0.1 # 0.1 ~ 0.5
 height_step: 0.1
 load_task_buffer: False
@@ -32,6 +32,7 @@ task_model_dir: null
 
 # use rejection sampling validation
 use_validation: 1
+
 
 # evalution scenario
 evaluation_flag: null # '3_cylineder_line', '5_cylineder_line', '8_cylineder_ring', '7_cylineder_ring'
@@ -43,11 +44,12 @@ detect_range: -1.0 # -1.0 means fully-observable
 arena_size: 0.9
 max_height: 1.2 # 2 * arena_size
 v_drone: 1.0
-v_prey: 0.5
+v_prey: 1.6
 
-use_collision: 1
 use_speed_penalty: 1
-catch_radius: 0.3
+# spare reward
+use_distance_reward: 0
+catch_radius: 0.2
 collision_radius: 0.01
 use_dynamic: False
 
@@ -56,4 +58,4 @@ cylinder:
   num: 5
   max_active: 3
   min_active: 0
-  random_active: True # if False, only train max_active
+  random_active: False # if False, only train max_active
