--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,6 +1,6 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/random0to3_final/v2_0_catch0_2_height0_6_size0_9.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/DR_wovalidation/seed0/v1_6_catch0_2_height1_2_size0_9.pt
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_final/v1_2_catch0_2_height1_2_size0_9.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_final2/v1_2_catch0_2.pt
 # model_dir: null
 
 # hydra.job.chdir: false
@@ -30,7 +30,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: 5_narrow_cl_v1_6
+  run_name: v1_6_catch0_2_random1_0_fixed3_wodistancereward
   # run_name: debug
   job_type: train
   entity: chenjy
@@ -48,8 +48,8 @@ defaults:
   # - task: HideAndSeek_circle_static_UED
   # - task: HideAndSeek_circle_static_UED_large_cylinder
   # - task: HideAndSeek_circle_static_UED_large_cylinder_cl
-  # - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
+  - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
   # - task: HideAndSeek_circle_eval
-  - task: HideAndSeek_circle_eval_large
+  # - task: HideAndSeek_circle_eval_large
   - algo: mappo
   - _self_
