--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,7 +1,9 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/random0to3_final/v2_0_catch0_2_height0_6_size0_9.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/DR_wovalidation/seed0/v1_6_catch0_2_height1_2_size0_9.pt
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_final2/v1_2_catch0_2.pt
 # model_dir: null
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed0.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed1.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed2.pt
 
 # hydra.job.chdir: false
 
@@ -25,13 +27,13 @@ viewer:
   # eye: [0., -4., 4.]
   # lookat: [0., 0., 1.]
   # front
-  eye: [-3., -3., 3.5]
+  eye: [3., 3., 3.5]
   lookat: [0., 0., 0.7]
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: v1_6_catch0_2_random0to3_cl_startheight0_5
-  # run_name: debug
+  # run_name: DR_wovalidation_v2_4_catch0_2
+  run_name: eval_2_search_ours
   job_type: train
   entity: chenjy
   project: PredatorPrey
@@ -48,8 +50,8 @@ defaults:
   # - task: HideAndSeek_circle_static_UED
   # - task: HideAndSeek_circle_static_UED_large_cylinder
   # - task: HideAndSeek_circle_static_UED_large_cylinder_cl
-  - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
+  # - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
   # - task: HideAndSeek_circle_eval
-  # - task: HideAndSeek_circle_eval_large
+  - task: HideAndSeek_circle_eval_large
   - algo: mappo
   - _self_
