--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,8 +1,9 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/random0to3_final/v2_0_catch0_2_height0_6_size0_9.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/DR_wovalidation/seed0/v1_6_catch0_2_height1_2_size0_9.pt
 # model_dir: null
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/cl_seed2.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed0.pt
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed1.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed1.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed2.pt
 
 # hydra.job.chdir: false
@@ -16,7 +17,7 @@ total_frames: 100_000_000_000
 max_iters: -1
 eval_interval: 200
 save_interval: 200
-seed: 0
+seed: 1
 
 viewer:
   resolution: [960, 720]
@@ -32,7 +33,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: DR_wovalidation_v2_4_catch0_2
+  # run_name: cl_v2_4_catch0_2_seed0_load_threshold1to1_5
   run_name: eval_2_search_ours
   job_type: train
   entity: chenjy
