--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,9 +1,9 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/random0to3_final/v2_0_catch0_2_height0_6_size0_9.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/DR_wovalidation/seed0/v1_6_catch0_2_height1_2_size0_9.pt
 # model_dir: null
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/DR_intrinsic/v2_4_catch0_15.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/DR_intrinsic/v2_4_catch0_15.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed0.pt
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed1.pt
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed1.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed2.pt
 
 # hydra.job.chdir: false
@@ -30,20 +30,20 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: DR_intrinsic_v2_4_catch0_12_seed0_load
+  run_name: DR_intrinsic_v2_4_catch0_12_seed0
   # run_name: random3_newprey_catch02
-  run_name: debug
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: PredatorPrey
-  # mode: online
-  mode: disabled # set to 'disabled' when debugging locally
+  mode: online
+  # mode: disabled # set to 'disabled' when debugging locally
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
-  # - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
-  - task: HideAndSeek_circle_eval_large
+  - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
+  # - task: HideAndSeek_circle_eval_large
   - algo: mappo
   - _self_
