--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,7 +1,7 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/random0to3_final/v2_0_catch0_2_height0_6_size0_9.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/DR_wovalidation/seed0/v1_6_catch0_2_height1_2_size0_9.pt
-# model_dir: null
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/DR_intrinsic/v2_4_catch0_15.pt
+model_dir: null
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/DR_intrinsic/v2_4_catch0_2_seed0.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed0.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed1.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed2.pt
@@ -30,7 +30,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: DR_intrinsic_v2_4_catch0_12_seed0
+  run_name: cl_new_reward_v0_5_catch0_5
   # run_name: random3_newprey_catch02
   # run_name: debug
   job_type: train
