--- a/cfg/task/HideAndSeek_circle_eval_large.yaml
+++ b/cfg/task/HideAndSeek_circle_eval_large.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 1000
+  num_envs: 1
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -29,17 +29,18 @@ detect_range: -1.0 # -1.0 means fully-observable
 arena_size: 0.9
 max_height: 1.2 # 2 * arena_size
 v_drone: 1.0
-v_prey: 2.4
+v_prey: 1.0
 
 use_collision: 1
 use_speed_penalty: 1
-catch_radius: 0.2
+collision_coef: 5.0
+catch_radius: 0.12
 collision_radius: 0.05
 use_dynamic: False
 
 cylinder:
   size: 0.3
   num: 5
-  max_active: 3
+  max_active: 0
   min_active: 0
   random_active: False # if False, only train max_active
