--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,10 +1,8 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/random0to3_final/v2_0_catch0_2_height0_6_size0_9.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/DR_wovalidation/seed0/v1_6_catch0_2_height1_2_size0_9.pt
-model_dir: null
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/DR_intrinsic/v2_4_catch0_2_seed0.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed0.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed1.pt
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_final/v2_4_catch0_2_seed2.pt
+# model_dir: null
+# model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_new_reward/v1_0_catch0_12.pt
+model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_new_reward/v1_0_catch0_12.pt
 
 # hydra.job.chdir: false
 
@@ -30,8 +28,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: cl_new_reward_v0_5_catch0_5
-  # run_name: random3_newprey_catch02
+  # run_name: cl_new_reward_v1_2_catch0_12
+  run_name: targetclip_01
   # run_name: debug
   job_type: train
   entity: chenjy
@@ -43,7 +41,7 @@ wandb:
   tags: 
 
 defaults:
-  - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
-  # - task: HideAndSeek_circle_eval_large
+  # - task: HideAndSeek_circle_static_UED_large_cylinder_cl_v2
+  - task: HideAndSeek_circle_eval_large
   - algo: mappo
   - _self_
