--- a/cfg/task/HideAndSeek_circle_eval_large.yaml
+++ b/cfg/task/HideAndSeek_circle_eval_large.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 100
+  num_envs: 1
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -20,7 +20,7 @@ action_transform: rate
 use_validation: 1
 
 # evalution scenario
-evaluation_flag: random # 'random', '2_search', '3_narrow', '3_surround', '5_narrow', '5_surround', '4_search'
+evaluation_flag: sim2real # 'random', '2_search', '3_narrow', '3_surround', '5_narrow', '5_surround', '4_search'
 
 # exp
 num_agents: 4
@@ -29,12 +29,12 @@ detect_range: -1.0 # -1.0 means fully-observable
 arena_size: 0.9
 max_height: 1.2 # 2 * arena_size
 v_drone: 1.0
-v_prey: 1.2
+v_prey: 2.4
 
 use_collision: 1
 use_speed_penalty: 1
 collision_coef: 5.0
-catch_radius: 0.2
+catch_radius: 0.15
 collision_radius: 0.05
 use_dynamic: False
 
