--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -20,16 +20,16 @@ seed: 0
 viewer:
   resolution: [960, 720]
   # up
-  eye: [0.001, 0.0, 6.]
-  lookat: [0., 0., 2.]
+  eye: [0.0, 0.0, 6.]
+  lookat: [0.01, 0., 2.]
   # # front
-  # eye: [3., 3., 3.5]
+  # eye: [-3., -3., 3.5]
   # lookat: [0., 0., 0.7]
 
 wandb:
   group: ${oc.select:..task.name}
   # run_name: DR_intrisinc_new_reward_v2_4_catch0_15
-  # run_name: targetclip_01
+  # run_name: debug
   run_name: sim2real_v2_4_catch0_15
   job_type: train
   entity: chenjy
