add inside penalty

--- a/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
+++ b/cfg/task/HideAndSeek_circle_static_UED_large_cylinder_cl_v2.yaml
@@ -49,6 +49,7 @@ v_prey: 2.4
 use_collision: 1
 collision_coef: 1.0
 use_speed_penalty: 1
+use_inside_penalty: 1
 use_distance_reward: 0
 catch_radius: 0.5
 collision_radius: 0.1
