--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -1,8 +1,8 @@
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/random0to3_final/v2_0_catch0_2_height0_6_size0_9.pt
 # model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/DR_wovalidation/seed0/v1_6_catch0_2_height1_2_size0_9.pt
 # model_dir: null
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_new_reward/v2_4_catch0_15.pt
-model_dir: /home/chenjy/OmniDrones/scripts/outputs/final_results/cl_new_reward/v2_4_catch0_5.pt
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/cl_wodistance_v2_4_catch0_14/04-20_13-54/wandb/run-20240420_135456-n0ajb9tj/files/checkpoint_236060672.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/cl_wodistance_collisionradius0_05_insidepenalty_v2_4_catch0_25/04-18_17-10/wandb/run-20240418_171039-d2uv9yuf/files/checkpoint_471990272.pt
 
 # hydra.job.chdir: false
 
@@ -28,9 +28,9 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: cl_wodistance_collisionradius0_1_insidepenalty_v2_4_catch0_5
+  run_name: cl_wodistance_v2_4_catch0_13
+  # run_name: cl_fixed0_v2_4_catch0_25
   # run_name: debug
-  # run_name: eval_3_narrow
   job_type: train
   entity: chenjy
   project: PredatorPrey
