--- a/cfg/task/HideAndSeek_circle_eval_large.yaml
+++ b/cfg/task/HideAndSeek_circle_eval_large.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 1
+  num_envs: 1000
   max_episode_length: 800
 
 drone_model: Crazyflie
@@ -20,7 +20,7 @@ action_transform: rate
 use_validation: 1
 
 # evalution scenario
-evaluation_flag: sim2real # 'random', '2_search', '3_narrow', '3_surround', '5_narrow', '5_surround', '4_search'
+evaluation_flag: 1_central # 'random', '1_central', '2_search', '3_central', '4_search', '5_central'
 
 # exp
 num_agents: 4
@@ -41,6 +41,6 @@ use_dynamic: False
 cylinder:
   size: 0.3
   num: 5
-  max_active: 0
+  max_active: 1
   min_active: 0
   random_active: False # if False, only train max_active
