--- a/cfg/task/Turn.yaml
+++ b/cfg/task/Turn.yaml
@@ -22,6 +22,11 @@ future_traj_steps: 4
 reward_effort_weight: 0.
 reward_action_smoothness_weight: 0.0
 reward_distance_scale: 1.6
+reward_acc_weight: 0.
+reward_jerk_weight: 0. # 0.01
+angular_acc_max: 50.0
+linear_acc_max: 10.0
+use_acc_jerk: 1
 
 action_transform: rate
 # action_transform: PIDrate
