--- a/cfg/task/Turn.yaml
+++ b/cfg/task/Turn.yaml
@@ -26,7 +26,8 @@ reward_acc_weight: 0.
 reward_jerk_weight: 0. # 0.01
 angular_acc_max: 50.0
 linear_acc_max: 10.0
-use_acc_jerk: 1
+use_acc: 1
+use_jerk: 0
 
 action_transform: rate
 # action_transform: PIDrate
