--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -10,7 +10,7 @@ model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
-eval_interval: 200
+eval_interval: -1
 save_interval: 100
 seed: 0
 
@@ -21,7 +21,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Turn_woanysim2real
+  run_name: Turn_woanysim2real_wojerk
   # run_name: debug
   job_type: train
   entity: chenjy
