--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -21,7 +21,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Turn_woanysim2real
+  run_name: Turn_wosim2real
   # run_name: debug
   job_type: train
   entity: chenjy
