--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,12 +5,12 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/chenjy/OmniDrones/scripts/outputs/Turn_wosim2real.pt
-model_dir: null
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/Turn_wosim2real.pt
+# model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
-eval_interval: -1
+eval_interval: 100
 save_interval: 100
 seed: 0
 
@@ -26,8 +26,8 @@ wandb:
   job_type: train
   entity: chenjy
   project: Track
-  mode: disabled
-  # mode: online # set to 'disabled' when debugging locally, online
+  # mode: disabled
+  mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
