--- a/cfg/task/Hover.yaml
+++ b/cfg/task/Hover.yaml
@@ -6,16 +6,22 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 4096
+  num_envs: 2048
   max_episode_length: 500
 
 drone_model: crazyflie
 force_sensor: false
 
-reward_effort_weight: 0.1
+use_acc: 1
+use_jerk: 1
 reward_action_smoothness_weight: 0.0
 reward_motion_smoothness_weight: 0.0
 reward_distance_scale: 1.2
+reward_v_scale: 0.0
+reward_acc_scale: 0.0
+reward_jerk_scale: 0.0
+linear_vel_max: 3.0
+linear_acc_max: 10.0
 
 # observation options
 omega: false
