--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,12 +5,12 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-model_dir: /home/jiayu/OmniDrones/scripts/outputs/Turn_wosim2real.pt
-# model_dir: null
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Turn_wosim2real.pt
+model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
-eval_interval: 100
+eval_interval: -1
 save_interval: 100
 seed: 0
 
@@ -21,8 +21,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: Turn_wosim2real_clipctbr30
-  run_name: debug
+  run_name: Hover_raw
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: Track
@@ -33,7 +33,7 @@ wandb:
   tags: 
 
 defaults:
-  # - task: Hover
-  - task: Turn
+  - task: Hover
+  # - task: Line
   - algo: mappo
   - _self_
