--- a/cfg/task/Hover.yaml
+++ b/cfg/task/Hover.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 2048
+  num_envs: 1
   max_episode_length: 500
 
 drone_model: crazyflie
@@ -37,7 +37,7 @@ action_noise: false
 # randomization:
 #   drone:
 #     train:
-#       mass_scale: [1., 1.3]
+#       mass_scale: [.8, 1.2]
 #       inertia_scale: [0.7, 1.3]
       # t2w_scale: [0.7, 1.3]
       # f2m_scale: [0.7, 1.3]
