--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,12 +5,12 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Turn_wosim2real.pt
-model_dir: null
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/Hover_clip60.pt
+# model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
-eval_interval: -1
+eval_interval: 100
 save_interval: 100
 seed: 0
 
@@ -21,13 +21,13 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Hover_raw
-  # run_name: debug
+  # run_name: Hover_clip30_load60
+  run_name: debug
   job_type: train
   entity: chenjy
   project: Track
-  # mode: disabled
-  mode: online # set to 'disabled' when debugging locally, online
+  mode: disabled
+  # mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
