--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,7 +5,7 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Hover_raw.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Hover_woupreward/05-07_18-08/wandb/run-20240507_180803-1w3sza23/files/checkpoint_917635072.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -21,7 +21,7 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Hover_woupreward
+  run_name: Hover_large
   # run_name: debug
   job_type: train
   entity: chenjy
