--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,12 +5,12 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Hover/05-08_14-53/wandb/run-20240508_145318-tatzbpxh/files/checkpoint_616169472.pt
-model_dir: null
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/takeoff_bodyrate1_0_thrust0_9/05-09_21-42/wandb/run-20240509_214214-ztb340s6/files/checkpoint_final.pt
+# model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
-eval_interval: -1
+eval_interval: 100
 save_interval: 100
 seed: 0
 
@@ -22,7 +22,7 @@ viewer:
 wandb:
   group: ${oc.select:..task.name}
   # run_name: eval_ours
-  run_name: takeoff
+  run_name: Hover_yaw0_bodyrate1_thrust09
   job_type: train
   entity: chenjy
   project: Track
@@ -33,7 +33,7 @@ wandb:
   tags: 
 
 defaults:
-  - task: Takeoff
+  - task: Hover
   # - task: Turn
   - algo: mappo
   - _self_
