--- a/cfg/task/Hover.yaml
+++ b/cfg/task/Hover.yaml
@@ -34,10 +34,10 @@ action_filter: false
 latency: false
 action_noise: false
 
-# randomization:
-#   drone:
-#     train:
-#       mass_scale: [.8, 1.2]
+randomization:
+  drone:
+    train:
+      mass_scale: [.8, 1.2]
 #       inertia_scale: [0.7, 1.3]
       # t2w_scale: [0.7, 1.3]
       # f2m_scale: [0.7, 1.3]
