--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,14 +5,14 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Hover_yaw0_bodyrate04_thrust09.pt
-model_dir: null
+model_dir: /home/jiayu/OmniDrones/scripts/outputs/Hover_yaw0_bodyrate04_thrust09.pt
+# model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
-eval_interval: -1
+eval_interval: 100
 save_interval: 100
-seed: 1
+seed: 0
 
 viewer:
   resolution: [960, 720]
@@ -21,8 +21,8 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: eval_ours
-  run_name: Hover_bodyrate04_random_mass08to12
+  run_name: eval_ours
+  # run_name: Hover_bodyrate04_random_mass08to12
   job_type: train
   entity: chenjy
   project: Track
