--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,12 +5,12 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-model_dir: /home/jiayu/OmniDrones/scripts/outputs/Hover_yaw0_bodyrate04_thrust09.pt
-# model_dir: null
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Hover_yaw0_bodyrate04_thrust09.pt
+model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
-eval_interval: 100
+eval_interval: -1
 save_interval: 100
 seed: 0
 
