--- a/cfg/task/Hover.yaml
+++ b/cfg/task/Hover.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 1
+  num_envs: 100
   max_episode_length: 500
 
 drone_model: crazyflie
@@ -28,6 +28,7 @@ motor: false
 time_encoding: true
 
 action_transform: PIDrate
+# action_transform: rate
 
 # sim2real options
 add_noise: false
