--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -10,19 +10,19 @@ model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
 max_iters: -1
-eval_interval: -1
+eval_interval: 100
 save_interval: 100
 seed: 0
 
 viewer:
   resolution: [960, 720]
-  eye: [-3., 0., 3.]
+  eye: [-2., 0., 2.]
   lookat: [0., 0., 1.]
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: debug
-  run_name: Hover_PID_wodone
+  run_name: debug
+  # run_name: Hover_PID_wodone
   job_type: train
   entity: chenjy
   project: Track
