--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -11,7 +11,7 @@ inertia:
   yy: 1.4e-5
   yz: 0.0
   zz: 2.17e-5
-mass: 0.03
+mass: 0.0321
 l: 0.096
 drag_coef: 0.2
 rotor_configuration:
@@ -26,10 +26,14 @@ rotor_configuration:
   - -1.0
   - 1.0
   force_constants:
-  - 2.88e-8 # KF = 4 * max_rot_vel**2 * force_constants / mg
-  - 2.88e-8
-  - 2.88e-8
-  - 2.88e-8
+  # - 2.88e-8 # KF = 4 * max_rot_vel**2 * force_constants / mg
+  # - 2.88e-8
+  # - 2.88e-8
+  # - 2.88e-8
+  - 2.350347298350041e-08
+  - 2.350347298350041e-08
+  - 2.350347298350041e-08
+  - 2.350347298350041e-08
   max_rotation_velocities:     
   - 2315      # 16mm dc motor -- 14000 rpm/v 3.7V --> 863 rps
   - 2315
