--- a/cfg/task/Track.yaml
+++ b/cfg/task/Track.yaml
@@ -6,7 +6,7 @@ defaults:
   - /base/sim_base@_here_
 
 env:
-  num_envs: 1000
+  num_envs: 2048
   max_episode_length: 1000
 
 drone_model: Crazyflie
@@ -23,8 +23,7 @@ reward_effort_weight: 0.
 reward_action_smoothness_weight: 0.0
 reward_distance_scale: 1.6
 
-action_transform: rate
-# action_transform: PIDrate
+action_transform: PIDrate
 # history: true
 # randomization:
 #   drone:
