--- a/omni_drones/robots/assets/usd/crazyflie.yaml
+++ b/omni_drones/robots/assets/usd/crazyflie.yaml
@@ -11,7 +11,7 @@ inertia:
   yy: 1.4e-5
   yz: 0.0
   zz: 2.17e-5
-mass: 0.0321
+mass: 0.0313 # cf13: 0.0321, cf11:0.0308, cf12: 0.0313
 l: 0.096
 drag_coef: 0.2
 rotor_configuration:
