--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,7 +5,7 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_star_random.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_smooth0012_reward005.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -21,19 +21,20 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Track_smoothscale0_5_woup_spin_reward
-  # run_name: debug
+  # run_name: Track_smoothscale0_5_woup_spin_reward
+  run_name: debug
   job_type: train
   entity: chenjy
   project: Track
-  # mode: disabled
-  mode: online # set to 'disabled' when debugging locally, online
+  mode: disabled
+  # mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
-  - task: Track
+  - task: Infeasible
+  # - task: Track
   # - task: Line
   # - task: Hover
   - algo: mappo
