--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -21,13 +21,13 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  # run_name: Track_smoothscale0_5_woup_spin_reward
-  run_name: debug
+  run_name: Infeasible_smooth0
+  # run_name: debug
   job_type: train
   entity: chenjy
   project: Track
-  mode: disabled
-  # mode: online # set to 'disabled' when debugging locally, online
+  # mode: disabled
+  mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
