--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -5,7 +5,7 @@ headless: true
 sim: ${task.sim}
 env: ${task.env}
 
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Infeasible_smooth0/05-26_15-42/wandb/run-20240526_154241-can7aie0/files/checkpoint_471990272.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_large_smooth0_fixedz/05-26_22-07/wandb/run-20240526_220720-b3lx8h3c/files/checkpoint_final.pt
 model_dir: null
 
 total_frames: 3000_000_000 #1000_000_000
@@ -16,13 +16,13 @@ seed: 0
 
 viewer:
   resolution: [960, 720]
-  eye: [0.005, 0., 5.]
+  eye: [0.005, 0., 10.]
   lookat: [0., 0., 1.]
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Track_large_smooth0
-  # run_name: Track_eval_size2_smooth005
+  # run_name: debug
+  run_name: Track_large_smooth0_fixedz
   job_type: train
   entity: chenjy
   project: Track
