--- a/cfg/train.yaml
+++ b/cfg/train.yaml
@@ -6,7 +6,7 @@ sim: ${task.sim}
 env: ${task.env}
 
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_size05to08_smooth0_reward_up_spin/05-28_10-28/wandb/run-20240528_102811-crgu03wi/files/checkpoint_603062272.pt
-# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_reproduce_size03to08/05-28_21-06/wandb/run-20240528_210702-pepsk3y6/files/checkpoint_final.pt
+# model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_size05to08_latency2/05-30_10-54/wandb/run-20240530_105420-04m29gq4/files/checkpoint_final.pt
 # model_dir: /home/jiayu/OmniDrones/scripts/outputs/Track_star.pt
 model_dir: null
 
@@ -23,21 +23,20 @@ viewer:
 
 wandb:
   group: ${oc.select:..task.name}
-  run_name: Track_size07to08_latency0
-  # run_name: Track_sanity_latency0_eval_size05_latency0
+  # run_name: Track_size05to08_latency0_smooth005_scratch
+  run_name: debug
   job_type: train
   entity: chenjy
   project: Track
-  # mode: disabled
-  mode: online # set to 'disabled' when debugging locally, online
+  mode: disabled
+  # mode: online # set to 'disabled' when debugging locally, online
   run_id: 
   monitor_gym: True
   tags: 
 
 defaults:
-  # - task: Infeasible
-  - task: Track
-  # - task: Line
+  - task: ZigZag
+  # - task: Track
   # - task: Hover
   - algo: mappo
   - _self_
